# Anna-Inbox

./: dev-wsl.sh  manifest.json
.anna/: dev-app.json
bundle/: app.js  index.html  style.css
executas/tool-zhaopy-inbox-agent-fwufkpwe/: executa.json
executas/tool-zhaopy-inbox-agent-fwufkpwe/src/mail_agent/: judgment.py  planner.py
executas/tool-zhaopy-inbox-agent-fwufkpwe/src/zhaopy_mail_agent/: main.py
executas/tool-zhaopy-inbox-tool-tcd7p8sx/: executa.json
executas/tool-zhaopy-inbox-tool-tcd7p8sx/src/executa_sdk/: sampling.py
executas/tool-zhaopy-inbox-tool-tcd7p8sx/src/mail_agent/: card_service.py  storage_ops.py  storage_types.py
executas/tool-zhaopy-inbox-tool-tcd7p8sx/src/zhaopy_mail_agent/: main.py
executas/tool-zhaopy-mail-agent-rd6b87r5/: executa.json
executas/tool-zhaopy-mail-agent-rd6b87r5/src/: pyproject.toml
executas/tool-zhaopy-mail-agent-rd6b87r5/src/executa_sdk/: __init__.py  storage.py
executas/tool-zhaopy-mail-agent-rd6b87r5/src/mail_agent/: handle_service.py  llm.py  mail_adapter.py  phase1.py  pipeline.py  strategies.py  types.py
executas/tool-zhaopy-mail-agent-rd6b87r5/src/zhaopy_mail_agent/: main.py
executas/tool-zhaopy-mail-tool-uwxhmecc/: executa.json
executas/tool-zhaopy-mail-tool-uwxhmecc/src/: pyproject.toml
executas/tool-zhaopy-mail-tool-uwxhmecc/src/zhaopy_mail_agent/: main.py
